--- a/resource/julia_pkg_management.qrc
+++ b/resource/julia_pkg_management.qrc
@@ -1,5 +1,10 @@
 <RCC>
   <qresource prefix="pkg">
-    <file>pkg_management.svg</file>
+    <file>pkg_management.PNG</file>
+    <file>upload.svg</file>
+    <file>delete.svg</file>
+    <file>install.svg</file>
+    <file>update_all.svg</file>
+    <file>update_one.svg</file>
   </qresource>
 </RCC>
