--- a/form/julia_pkg_management.ui
+++ b/form/julia_pkg_management.ui
@@ -71,7 +71,7 @@
         <bool>true</bool>
        </property>
        <property name="textInteractionFlags">
-        <set>Qt::TextBrowserInteraction</set>
+        <set>Qt::LinksAccessibleByMouse</set>
        </property>
       </widget>
      </item>
